--- a/package.json
+++ b/package.json
@@ -5,5 +5,7 @@
   , "dependencies": {
       "express": "2.5.2"
     , "jade": ">= 0.0.1"
+    , "mongoose": "2.4.10"
+    , "everyauth": "0.2.28"
   }
 }
