--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.2"
-    , "jade": ">= 0.0.1"
-    , "mongoose": "2.4.10"
-    , "everyauth": "0.2.28"
+  "name": "application-name",
+  "version": "0.0.1-1",
+  "private": true,
+  "dependencies": {
+    "express": "2.5.2",
+    "jade": ">= 0.0.1",
+    "mongoose": "2.4.10",
+    "everyauth": "0.2.28"
+  },
+  "subdomain": "testler",
+  "scripts": {
+    "start": "app.js"
   }
 }
