--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "application-name",
-  "version": "0.0.1-5",
+  "name": "testler",
+  "version": "0.0.2",
   "private": true,
   "dependencies": {
     "express": "2.5.2",
     "jade": ">= 0.0.1",
     "mongoose": "2.4.10",
-    "everyauth": "0.2.28"
+    "everyauth": "0.2.28",
+    "brain": "0.3.6"
   },
   "subdomain": "testler",
   "scripts": {
