--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "testler",
-  "version": "0.0.2-150",
+  "version": "0.0.3-2",
   "private": true,
   "dependencies": {
     "express": "2.5.2",
     "jade": ">= 0.0.1",
     "mongoose": "2.4.10",
     "everyauth": "0.2.28",
-    "brain": "0.3.6"
+    "brain": "0.3.6",
+    "redis": ">= 0.0.1"
   },
   "subdomain": "testler",
   "scripts": {
